p bug on small screen fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,6 @@ h5 {
 p {
     font-family: 'Chathura', sans-serif;
     text-align: center;
-    margin: 5% 20%; 
     font-size: 30px;
     line-height: 0.8;
 }
